--- a/HP/src/components/header.scss
+++ b/HP/src/components/header.scss
@@ -1,14 +1,9 @@
-.bigmessage {
+.Airplane {
 	overflow: hidden;
 	user-select: none;
-}
-
-.bigmessage1 {
-	font-size: 100px;
-	font-family: YuMincho;
-	margin-top: 10%;
-	margin-left: 10%;
-	// margin: 0%;
+	margin-top: 50px;
+	height: 100vh;
+	width: 100%;
 }
 
 .bigmessage2 {
