--- a/HP/src/sass/_masthead.scss
+++ b/HP/src/sass/_masthead.scss
@@ -4,12 +4,13 @@ header.masthead {
 	padding-bottom: calc(10rem - #{$navbar-height});
 	// replace the masthead.jpg image in the /img directory to change the image
 	// if the image name change, make sure to update the url path below!
-	background: url('../images/force/home-pc.png');
+	background: url('../images/pic/airplane-gray.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: cover;
 	margin-left: -1%;
+	margin-bottom: 0%;
 	h1 {
 		font-size: 2.25rem;
 	}
