--- a/HP/src/components/footer.scss
+++ b/HP/src/components/footer.scss
@@ -37,3 +37,12 @@
 .pagetop-button {
 	margin-right: 0%;
 }
+
+.logo h1 {
+	font-family: YuMincho;
+	text-align: center;
+}
+.logo span {
+	font-family: YuMincho;
+	color: navy;
+}
