--- a/HP/src/components/header.scss
+++ b/HP/src/components/header.scss
@@ -28,3 +28,11 @@
 .nav-toggle {
 	user-select: none;
 }
+
+#mainNav h1 {
+	font-family: YuMincho;
+}
+#mainNav span {
+	font-family: YuMincho;
+	color: navy;
+}
