--- a/HP/src/pages/company_information/home.scss
+++ b/HP/src/pages/company_information/home.scss
@@ -2,6 +2,7 @@
 .heading {
     position: relative;
     z-index: 5;
+    background: url(../../images/pic/architecture-LightGray.jpg);
     }
   
   .heading h1 {
