--- a/HP/src/pages/contact/contact.scss
+++ b/HP/src/pages/contact/contact.scss
@@ -5,3 +5,9 @@
 .bottom-contents {
   text-align: center;
 }
+
+.parent {
+	background: url('../../images/pic/architecture-LightGray.jpg');
+  padding: 10%;
+  width: 100%;
+}
