--- a/HP/src/pages/index.scss
+++ b/HP/src/pages/index.scss
@@ -2,11 +2,13 @@
 	background-color: blue;
 	width: 33%;
 	height: 300px;
+	min-height: 400px;
 	margin-left: 30%;
 	margin-right: 30%;
 	position: absolute;
 	z-index: 1;
 	margin-top: -5px;
+	padding: 10px;
 }
 
 .bigmessage1 {
@@ -28,12 +30,12 @@
 
 .arrow {
 	width: 50%;
-	height: 300px;
+	height: 400px;
 }
 
 .digi {
 	width: 50%;
-	height: 300px;	
+	height: 400px;	
 }
 
 .stairs {
@@ -43,18 +45,36 @@
 }
 
 .office {
-	width: 30%;
-	margin-left: 10%;
-	margin-right: 10%;
+	width: 100%;
+	min-height: 300px;
+	max-height: 300px;
 }
 .hands {
-	width: 30%;
-	margin-left: 10%;
-	margin-right: 10%;
+	width: 100%;
+	min-height: 300px;
+	max-height: 300px;
 }
 
-.buttonsUp {
-	margin-top: -100px;
+.peripheryBox {
+	width: 30%;
+	height: 400px;
+	margin: 3%;
+	margin-left: 10%;
+	margin-right: 10%;
+	float: left;
+	background-color: blue;
+}
+
+.peripheryBox h3 {
+	font-family: YuMincho;
+	float: left;
+	margin: 20px;
+	margin-right: 50px;
+}
+.peripheryBox p {
+	font-family: YuMincho;
+	margin: 30px;
+
 }
   
 .text-image p {
