--- a/HP/src/pages/recruitment/recruit .scss
+++ b/HP/src/pages/recruitment/recruit .scss
@@ -11,7 +11,10 @@
 //     background: url(../../images/force/recruitment.png) top center / cover no-repeat;
 // }
 .greet {
+    width: 100%;
     position: relative;
+    padding: 5%;
+    background: url(../../images/pic/stairs-LightGray.jpg);
 }
 
 .greet div {
@@ -20,8 +23,8 @@
 }
 
 .box {
-    margin: 10%;
-    margin-top: -250px;
+    // margin-bottom: 10%;
+    margin-top: -300px;
     margin-left: 45%;
     border: 0.5rem solid;
     border-color: navy;
@@ -33,8 +36,8 @@
 .smalltitle {
     font-family: YuMincho;
     font-size: 25px;
-    margin-top: -9%;
-    margin-left: -11%;
+    // margin-top: -9%;
+    // margin-left: -11%;
     width: 250px;
     height: 40px;
     margin-bottom: 5%;
@@ -62,13 +65,71 @@
 }
 
 .minister {
-    z-index: 1;
-    margin-top: -400px;
+    // z-index: 1;
+    // margin-top: -400px;
     margin-left: 15%;
     width: 30%;
+    height: 300px;
     overflow: hidden;
 }
 
+.mapping {
+    background: url(../../images/pic/architecture-LightGray.jpg);
+    padding: 5px;
+}
+
+.mapping h1 {
+    position: relative;
+    font-weight: bold;
+    font-size: 2em;
+    font-family: YuMincho;;
+    left: 50%;
+    // top: 5%;
+    -ms-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    margin-top:5%;
+    padding:5;
+    width: 350px;
+    text-align: center;
+    }
+
+.mapping p {
+  position: relative;
+    color: blue;
+    font-weight: bold;
+    font-size: 0.5em;
+    font-family: YuMincho;;
+    // top: 9%;
+    left: 50%;
+    -ms-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    margin:0;
+    padding:0;
+    width: 350px;
+    text-align: center;
+}
+
+.mapping h3 {
+  position: relative;
+  font-weight: bold;
+  font-size: 1em;
+  font-family: YuMincho;;
+  top: 20%;
+  left: 20%;
+  -ms-transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  margin-top:5%;
+  padding:0;
+  width: 350px;
+  text-align: center;
+//   margin-bottom: 5px;
+}
+
 .map {
-    margin-top: -500px;
+    margin: 10%;
+    margin-top: 0%;
+    margin-bottom: 50px;
 }
