--- a/HP/src/pages/contact/contact.scss
+++ b/HP/src/pages/contact/contact.scss
@@ -9,5 +9,6 @@
 .parent {
 	background: url('../../images/pic/architecture-LightGray.jpg');
   padding: 10%;
+  padding-top: 50px;
   width: 100%;
 }
