--- a/HP/src/pages/company_information/home.scss
+++ b/HP/src/pages/company_information/home.scss
@@ -6,7 +6,7 @@
     }
   
   .heading h1 {
-    position: absolute;
+    position: relative;
     font-weight: bold;
     font-size: 2em;
     font-family: YuMincho;;
@@ -16,6 +16,7 @@
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
     margin:0;
+    margin-top: 50px;
     padding:0;
     width: 350px;
     text-align: center;
@@ -27,7 +28,7 @@
 // }
 
 .heading p {
-  position: absolute;
+  position: relative;
     color: blue;
     font-weight: bold;
     font-size: 0.5em;
@@ -44,7 +45,7 @@
 }
 
 .heading h3 {
-  position: absolute;
+  position: relative;
   font-weight: bold;
   font-size: 1em;
   font-family: YuMincho;;
