--- a/HP/src/pages/recruitment/recruit .scss
+++ b/HP/src/pages/recruitment/recruit .scss
@@ -14,6 +14,7 @@
     width: 100%;
     position: relative;
     padding: 5%;
+    padding-top: 250px;
     background: url(../../images/pic/stairs-LightGray.jpg);
 }
 
@@ -24,7 +25,7 @@
 
 .box {
     // margin-bottom: 10%;
-    margin-top: -300px;
+    margin-top: -330px;
     margin-left: 45%;
     border: 0.5rem solid;
     border-color: navy;
