--- a/HP/src/pages/index.scss
+++ b/HP/src/pages/index.scss
@@ -70,10 +70,12 @@
 	float: left;
 	margin: 20px;
 	margin-right: 50px;
+	color: gainsboro;
 }
 .peripheryBox p {
 	font-family: YuMincho;
 	margin: 30px;
+	color: gainsboro;
 
 }
   
