--- a/HP/src/pages/recruitment/newGraduate.scss
+++ b/HP/src/pages/recruitment/newGraduate.scss
@@ -39,3 +39,89 @@
     padding-right: 5%;
     margin-left: 5%;
 }
+
+.newheader h1 {
+    position: relative;
+    font-weight: bold;
+    font-size: 2em;
+    font-family: YuMincho;;
+    left: 50%;
+    -ms-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    padding:5;
+    width: 350px;
+    text-align: center;
+    }
+
+    .newheader p {
+        position: relative;
+          color: blue;
+          font-weight: bold;
+          font-size: 0.5em;
+          font-family: YuMincho;;
+          // top: 9%;
+          left: 50%;
+          -ms-transform: translate(-50%,-50%);
+          -webkit-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+          margin:0;
+          padding:0;
+          width: 350px;
+          text-align: center;
+      }
+
+      .newmapping {
+        background: url(../../images/pic/architecture-LightGray.jpg);
+        padding-top: 80px;
+    }
+    
+    .newmappingh1 {
+        position: relative;
+        font-weight: bold;
+        font-size: 2em;
+        font-family: YuMincho;;
+        left: 50%;
+        // top: 5%;
+        -ms-transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+        margin-top:5%;
+        padding:5;
+        width: 350px;
+        text-align: center;
+        }
+    
+    .newmappingp {
+      position: relative;
+        color: blue;
+        font-weight: bold;
+        font-size: 0.5em;
+        font-family: YuMincho;;
+        // top: 9%;
+        left: 50%;
+        -ms-transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+        margin:0;
+        padding:0;
+        width: 350px;
+        text-align: center;
+    }
+    
+    .newmapping h3 {
+      position: relative;
+      font-weight: bold;
+      font-size: 1em;
+      font-family: YuMincho;;
+      top: 20%;
+      left: 20%;
+      -ms-transform: translate(-50%,-50%);
+      -webkit-transform: translate(-50%,-50%);
+      transform: translate(-50%,-50%);
+      margin-top:5%;
+      padding:0;
+      width: 350px;
+      text-align: center;
+    //   margin-bottom: 5px;
+    }
