--- a/HP/src/components/footer.scss
+++ b/HP/src/components/footer.scss
@@ -11,7 +11,7 @@
 }
 
 .footer-bg {
-	background-color: gray;
+	background-color: #BDBDBD;
 	// height: ;
 	padding-top: 30px;
 }
@@ -19,13 +19,13 @@
 .footer1 {
 	font-family: YuMincho;
 	font-size: 1.2rem;
-	color: gainsboro;
+	color: #FFFFFF;
 }
 
 .footer2 {
 	font-family: YuMincho;
 	font-size: 18px;
-	color: gainsboro;
+	color: #FFFFFF;
 	margin: 2%;
 	text-align: right;
 }
@@ -33,7 +33,7 @@
 .footer3 {
 	font-family: YuMincho;
 	font-size: 22px;
-	color: gainsboro;
+	color: #FFFFFF;
 }
 
 .pagetop-button {
@@ -46,14 +46,14 @@
 	margin-top: -150px;
 	border-right: 5px solid;
 	border-right-style: groove;
-	border-color: gainsboro;
+	border-color: #FFFFFF;
 	margin-bottom: 30px;
 }
 .logo h1 {
 	font-family: YuMincho;
 	text-align: center;
 	font-size: x-large;
-	color: gainsboro;
+	color: #FFFFFF;
 	padding: 10px;
 }
 .logo h2 {
@@ -61,12 +61,12 @@
 	text-align: left;
 	margin-left: 10px;
 	font-size: large;
-	color: gainsboro;
+	color: #FFFFFF;
 	padding: 10px;
 }
 .logo span {
 	font-family: YuMincho;
-	color: navy;
+	color: #8BC34A;
 }
 
 .rightBox {
@@ -77,7 +77,7 @@
 	padding: 10px;
 	border-left: 5px solid;
 	border-left-style: groove	;
-	border-color: gainsboro;
+	border-color: #FFFFFF;
 }
 
 .copyright {
