--- a/HP/src/components/header.scss
+++ b/HP/src/components/header.scss
@@ -31,8 +31,9 @@
 
 #mainNav h1 {
 	font-family: YuMincho;
+	color: #FFFFFF;
 }
 #mainNav span {
 	font-family: YuMincho;
-	color: navy;
+	color: #8BC34A;
 }
