--- a/HP/src/pages/company_information/home.scss
+++ b/HP/src/pages/company_information/home.scss
@@ -29,7 +29,7 @@
 
 .heading p {
   position: relative;
-    color: blue;
+    color: #2196F3;
     font-weight: bold;
     font-size: 0.5em;
     font-family: YuMincho;;
@@ -101,7 +101,7 @@
 // .center {
 //     width: 120px;
 //     padding-top: 10%;
-//     color: aliceblue;
+//     color: alice#2196F3;
 //     margin: 0 auto;
 // }
 
@@ -128,7 +128,7 @@
   margin-top: -330px;
   margin-left: 45%;
   border: 0.5rem solid;
-  border-color: navy;
+  border-color: #2196F3;
   padding: 5%;
   font-family: YuMincho;
   z-index: 1;
@@ -144,7 +144,7 @@
   margin-bottom: 5%;
 }   
 .smalltitle span:nth-child(1) {
-  color: navy;
+  color: #2196F3;
   font-family: YuMincho;
 }
 .spacer {
@@ -197,7 +197,7 @@
 
 .mapping p {
 position: relative;
-  color: blue;
+  color: #2196F3;
   font-weight: bold;
   font-size: 0.5em;
   font-family: YuMincho;;
