--- a/HP/src/pages/recruitment/recruit .scss
+++ b/HP/src/pages/recruitment/recruit .scss
@@ -25,7 +25,7 @@
 
     .recheader p {
         position: relative;
-          color: blue;
+          color: #2196F3;
           font-weight: bold;
           font-size: 0.5em;
           font-family: YuMincho;;
@@ -52,7 +52,7 @@
     margin-top: 5%;
     margin-left: 10%;
     border: 0.5rem solid;
-    border-color: navy;
+    border-color: #2196F3;
     padding: 5%;
     font-family: YuMincho;
     // background-color: aqua;
@@ -66,7 +66,7 @@
     margin-bottom: 5%;
 }   
 .smalltitle span:nth-child(1) {
-    color: navy;
+    color: #1976D2;
     font-family: YuMincho;
 }
 .spacer {
@@ -110,7 +110,7 @@
 
 .mapping p {
   position: relative;
-    color: blue;
+    color: #2196F3;
     font-weight: bold;
     font-size: 0.5em;
     font-family: YuMincho;;
