--- a/HP/src/pages/contact/contact.scss
+++ b/HP/src/pages/contact/contact.scss
@@ -9,6 +9,6 @@
 .parent {
 	background: url('../../images/pic/architecture-LightGray.jpg');
   padding: 10%;
-  padding-top: 50px;
+  // padding-top: 50px;
   width: 100%;
 }
