--- a/HP/src/pages/recruitment/newGraduate.scss
+++ b/HP/src/pages/recruitment/newGraduate.scss
@@ -1,7 +1,7 @@
 .title {
     width: 120px;
     padding-top: 60px;
-    color: aliceblue;
+    color: alice#2196F3;
     margin: 0 auto;
 }
 
@@ -56,7 +56,7 @@
 
     .newheader p {
         position: relative;
-          color: blue;
+          color: #2196F3;
           font-weight: bold;
           font-size: 0.5em;
           font-family: YuMincho;;
@@ -94,7 +94,7 @@
     
     .newmappingp {
       position: relative;
-        color: blue;
+        color: #2196F3;
         font-weight: bold;
         font-size: 0.5em;
         font-family: YuMincho;;
