--- a/HP/src/pages/company_information/home.scss
+++ b/HP/src/pages/company_information/home.scss
@@ -125,8 +125,8 @@
 
 .box {
   // margin-bottom: 10%;
-  margin-top: -330px;
-  margin-left: 45%;
+  // margin-top: -330px;
+  // margin-left: 45%;
   border: 0.5rem solid;
   border-color: #2196F3;
   padding: 5%;
@@ -137,32 +137,37 @@
 .smalltitle {
   font-family: YuMincho;
   font-size: 25px;
-  // margin-top: -9%;
-  // margin-left: -11%;
-  width: 250px;
+  width: max-content;
   height: 40px;
   margin-bottom: 5%;
+  text-align: center;
+  margin-left: 35%;
 }   
+.smalltitle p {
+  text-align: center;
+  margin: 0 0;
+}
 .smalltitle span:nth-child(1) {
   color: #2196F3;
   font-family: YuMincho;
 }
-.spacer {
-  padding-bottom: 5%;
-  padding-left: 10%;
-}
-.textcenter {
-  text-align: center;
-  padding-top: 5%;
-  font-family: YuMincho;
-  font-size: 20px;
-}
+// .spacer {
+//   padding-bottom: 5%;
+//   padding-left: 10%;
+// }
+// .textcenter {
+//   text-align: center;
+//   padding-top: 5%;
+//   font-family: YuMincho;
+//   font-size: 20px;
+// }
 .sub_title {
   font-size: x-large;
 }
 .sub_contentsR {
   padding: 0 10%;
   font-size: 20px;
+  text-align: center;
 }
 
 .minister {
